<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuAprender"
    android:background="@drawable/bg_blur_red_purple">
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/opciones"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="350dp"/>

    <TextView
        android:layout_width="180dp"
        android:layout_height="107dp"
        android:layout_marginLeft="130dp"

        android:height="200dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/menuaprender"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/animales"
        android:contentDescription="@string/animales"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="180dp"

         />

    <Button
        android:onClick="iranimales"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/animales"

        android:layout_marginTop="4dp"
        android:layout_marginLeft="160dp"
        />
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/colores"
        android:contentDescription="@string/animales"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="180dp"

        />


    <Button
        android:onClick="ircolores"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/colores"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="160dp"/>
    <ImageView
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:src="@drawable/frutas"
        android:contentDescription="@string/animales"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="180dp"

        />

    <Button
        android:onClick="irfrutas"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/frutas"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="160dp"/>
    <ImageView
        android:layout_width="70dp"
        android:layout_height="75dp"
        android:src="@drawable/numeros"
        android:contentDescription="@string/animales"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="180dp"

        />


    <Button
        android:onClick="irnumeros"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/numeros"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="160dp"/>

</LinearLayout>