<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Animales"
    android:background="@drawable/bg_blur_red_purple">

    <TextView
        android:layout_width="130dp"
        android:layout_height="66dp"
        android:layout_marginLeft="140dp"

        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/animales"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="-210dp"
        android:src="@drawable/leon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leon"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="100dp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginLeft="-280dp"
        android:layout_marginTop="350dp"
        android:src="@drawable/cebra" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cebra"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="60dp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginLeft="-280dp"
        android:layout_marginTop="580dp"
        android:src="@drawable/elefante" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elefante"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="600dp"
        android:layout_marginLeft="60dp"/>


</LinearLayout>