<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_blur_red_purple"

    android:padding="16dp">

    <!-- Título principal -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numeros"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"/>

        <!-- Espacio reservado para el icono de configuraciones -->
        <ImageView
            android:id="@+id/btnConfiguracion"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/opciones"
           />
    </RelativeLayout>

    <!-- Contenedor general para las imágenes y textos -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/uno"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uno"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/dos"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dos"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- 3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/tres"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tres"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- 4 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cuatro"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cuatro"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- 5 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cinco"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cinco"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- 6 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/seis"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seis"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- 7 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/siete"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/siete"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- 8 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ocho"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ocho"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- 9 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/nueve"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nueve"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- 10 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/diez"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diez"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
