<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_blur_red_purple"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:onClick="auPreguntaNumeros2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="170dp">

        <!-- Card 4 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/btnNum4"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/cuatro"
                android:contentDescription="@string/cuatro"/>
        </androidx.cardview.widget.CardView>

        <!-- Card 5 (correct) -->
        <androidx.cardview.widget.CardView
            android:id="@+id/btnNum5"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/cinco"
                android:contentDescription="@string/cinco"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Card 3 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/btnNum6"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="8dp"
            android:layout_marginTop="200dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tres"
                android:scaleType="centerInside"
                android:src="@drawable/seis" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</LinearLayout>
