<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity"
    android:background="@drawable/bg_blur_red_purple">

    <!-- Texto de bienvenida -->
    <TextView
        android:id="@+id/tvBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloprincipal"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textColor="@android:color/white"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:shadowColor="#80000000"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="8" />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/opciones"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="358dp"/>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/usuario"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <!-- Imagen central -->
    <ImageView
        android:id="@+id/imgEnglish"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ingles"
        android:contentDescription="@string/app_name"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:elevation="5dp" />

    <!-- Botón principal -->
    <Button
        android:onClick="irdatos"
        android:id="@+id/btnStart"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/tituloboton"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btn_gradient"
        android:elevation="10dp" />

</RelativeLayout>
